--- a/web/appraisal/templates/appraisal/value_renta.html
+++ b/web/appraisal/templates/appraisal/value_renta.html
@@ -27,22 +27,22 @@
         <tr class="border-bottom">
           <td></td>
           <td>
-            <input id="id_value_rent_month" class="form-control text-right" disabled>
+            <input id="id_value_rent_month" class="form-control form-control-sm text-right" disabled>
           </td>
           <td>
-            <input id="id_value_rent_months" class="form-control text-center" disabled>
+            <input id="id_value_rent_months" class="form-control form-control-sm text-center" disabled>
           </td>
           <td>
-            <input id="id_value_rent_year" class="form-control text-right" disabled>
+            <input id="id_value_rent_year" class="form-control form-control-sm text-right" disabled>
           </td>
           <td>
-            <input id="id_value_rent_rate" class="form-control text-right" disabled>
+            <input id="id_value_rent_rate" class="form-control form-control-sm text-right" disabled>
           </td>
           <td>
-            <input id="id_value_rent_per_area" class="form-control text-right" disabled>
+            <input id="id_value_rent_per_area" class="form-control form-control-sm text-right" disabled>
           </td>
           <td>
-            <input id="id_value_rent" class="form-control text-right" disabled>
+            <input id="id_value_rent" class="form-control form-control-sm text-right" disabled>
           </td>
           <td></td>
         </tr>
