--- a/web/appraisal/templates/appraisal/value_similar_selected_buildings.html
+++ b/web/appraisal/templates/appraisal/value_similar_selected_buildings.html
@@ -147,10 +147,10 @@
             <td></td>
         </tr>
         {% else %}
-        <tr class="border-bottom">
+        <tr class="border-bottom" style="background:#fff3cd;">
             <td></td>
                 <td colspan="7" style="text-align:center;">
-                    <span class="badge badge-info">No se han agregado propiedades similares</span>
+                    <small>No se han agregado propiedades similares</small>
                 </td>
             <td></td>
         </tr>     
@@ -253,10 +253,10 @@
             <td></td>
         </tr>
         {% else %}
-        <tr class="border-bottom">
+        <tr class="border-bottom" style="background:#fff3cd;">
             <td></td>
                 <td colspan="11" style="text-align:center;">
-                    <span class="badge badge-info">No se han agregado propiedades similares</span>
+                    <small>No se han agregado propiedades similares</small>
                 </td>
             <td></td>
         </tr>     
