--- a/web/archive/templates/archive/appraisals_search.html
+++ b/web/archive/templates/archive/appraisals_search.html
@@ -1,7 +1,7 @@
 {% load custom_tags %}
 
 <thead>
-  {% with state=0 %}
+  {% with state=5 %}
   {% include 'main/appraisals_table_header.html' %}
   {% endwith %}
 </thead>
@@ -10,7 +10,7 @@
     {% include 'main/appraisals_table_search.html' %}
   </tr>
   {% for appraisal in appraisals %}
-  <tr class='appraisal' id="tr_search-{{appraisal.id}}">
+  <tr class='appraisal' id="tr_table_search-{{appraisal.id}}">
     {% include 'archive/appraisals_search_tr.html' %}
   </tr>
   {% endfor %}
