--- a/web/main/templates/main/appraisals_table_sent_tr.html
+++ b/web/main/templates/main/appraisals_table_sent_tr.html
@@ -24,7 +24,7 @@
     {% endif %}
   </span>
 </td>
-<td>
+<td class="dateFinished">
   {{appraisal.timeFinished | date:"d/m/Y G:i" }}
 </td>
 <td style="text-align:right;">
