--- a/web/main/templates/main/modals.html
+++ b/web/main/templates/main/modals.html
@@ -6,8 +6,8 @@
   {% include 'main/modals_assign_visador.html' %}
 </div>
 
-<div class="modal fade" id="modal_delete" tabindex="-1" role="dialog" aria-hidden="true">
-  {% include 'main/modals_delete.html' %}
+<div class="modal fade" id="modal_archive" tabindex="-1" role="dialog" aria-hidden="true">
+  {% include 'main/modals_archive.html' %}
 </div>
 
 <div class="modal fade" id="modal_evaluate" tabindex="-2" role="dialog" aria-labelledby="label" aria-hidden="true">
