--- a/web/appraisal/static/appraisal/css/app.css
+++ b/web/appraisal/static/appraisal/css/app.css
@@ -18,6 +18,14 @@
 	text-align: center;
 }
 
+#table_resumen {
+    font-size: 0.85rem;
+}
+
+#table_valuation_rent {
+    font-size: 0.85rem;
+}
+
 .table_selected_terrains {
     font-size: 0.85rem;
     border-radius: 0.0rem;
