--- a/web/appraisal/templates/appraisal/main.html
+++ b/web/appraisal/templates/appraisal/main.html
@@ -5,6 +5,7 @@
 {% block head %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'appraisal/css/app.css' %}">
+<link rel="stylesheet" href="{% static 'main/css/logbook.css' %}">
 <script src="{% static "main/js/modal_assign_tasador.js" %}" type="text/javascript"></script>
 <script src="{% static "main/js/tools.js" %}" type="text/javascript"></script>
 {% endblock head %}
@@ -14,7 +15,6 @@
   <nav class="navbar justify-content-between">
     <!--<a class="navbar-brand" href="#">-->
     <h4>
-      <span class="badge badge-secondary mr-2" style="font-size: 100%;">{{appraisal.real_estates.first.buildings.first.get_propertyType_display}}</span>
       {{appraisal.address}}
     </h4>
     <!--</a>-->
