--- a/web/main/static/main/css/base.css
+++ b/web/main/static/main/css/base.css
@@ -55,7 +55,7 @@ input.error
 input.edit_contact
 {
   margin: 0.0;
-  padding: 0.0em 0.0em 0.0em 0.4em;
+  padding: 0.0em 0.4em 0.0em 0.4em;
   font-size: 0.9em;
   border: 1px solid #444;
   border-radius: 5px;
@@ -113,5 +113,5 @@ button:focus {outline:0;}
 .btn-active {
   border-width: 1px;
   border-color: #007bff!important;
-  color: #000;
+  color: #d11;
 }
