--- a/web/main/templates/main/appraisals_table_in_appraisal.html
+++ b/web/main/templates/main/appraisals_table_in_appraisal.html
@@ -2,18 +2,18 @@
 
 <thead>
   {% with state=2 %}
-  {% include 'main/appraisals_table_header.html' %}
+    {% include 'main/appraisals_table_header.html' %}
   {% endwith %}
 </thead>
 <tbody>
   <tr>
     {% with state=1 %}
-    {% include 'main/appraisals_table_search.html' %}
+      {% include 'main/appraisals_table_search.html' %}
     {% endwith %}
   </tr>
   {% for appraisal in appraisals_in_appraisal %}
   {% has_notification_appraisal appraisal.id notifications_appraisal_ids as hna %}
-  <tr class='appraisal in_appraisal {{hna|yesno:"notification,"}}' id="tr_table_in_appraisal-{{appraisal.id}}">
+  <tr class='appraisal in_appraisal {{hna|yesno:"notification,"}} {{appraisal.in_conflict|yesno:"conflict,"}}' id="tr_table_in_appraisal-{{appraisal.id}}">
     {% include 'main/appraisals_table_in_appraisal_tr.html' %}
   </tr>
   {% endfor %}
