--- a/web/main/templates/main/appraisals_table_in_appraisal_tr.html
+++ b/web/main/templates/main/appraisals_table_in_appraisal_tr.html
@@ -15,7 +15,7 @@
   <span class="propertyType">{% include 'main/td_property_type_icon.html' %}</span>
 </td>
 <td>
-  <a class="address" href="{{appraisal.url}}" style="{{appraisal.in_conflict|yesno:"font-weight:800;color:red;,"}}">
+  <a class="address" href="{{appraisal.url}}">
     {{ appraisal.address_no_region }}
   </a>
 </td>
@@ -63,17 +63,8 @@
     {% endif %}
   </div>
 </td>
-<td style="text-align:center;">
-  {% if appraisal.in_appraisal %}
-  <i class="fas fa-play"></i>
-  {% elif appraisal.paused %}
-  <i class="fas fa-pause"></i>
-  {% endif %}
-</td>
-<td class="Creada">
-  {{appraisal.timeCreated | date:"d/m"}}
-</td>
-<td>
+{% include 'main/appraisals_table_td_date_created.html' %}
+<td class="dateDue">
   {% if appraisal.daysLeft > 3 %}
     <p style="margin-bottom:0em;" class="font-weight-bold">{{appraisal.timeDue|date:"d/m G:i"}}</p>
   {% elif appraisal.daysLeft > 1 %}
