--- a/web/main/templates/main/appraisals_table_in_revision.html
+++ b/web/main/templates/main/appraisals_table_in_revision.html
@@ -2,18 +2,18 @@
 
 <thead>
   {% with state=3 %}
-  {% include 'main/appraisals_table_header.html' %}
+    {% include 'main/appraisals_table_header.html' %}
   {% endwith %}
 </thead>
 <tbody>
   <tr>
     {% with state=3 %}
-    {% include 'main/appraisals_table_search.html' %}
+      {% include 'main/appraisals_table_search.html' %}
     {% endwith %}
   </tr>
   {% for appraisal in appraisals_in_revision %}
   {% has_notification_appraisal appraisal.id notifications_appraisal_ids as hna %}
-  <tr class='appraisal in_revision {{hna|yesno:"notification,"}}' id="tr_table_in_revision-{{appraisal.id}}">
+  <tr class='appraisal in_revision {{hna|yesno:"notification,"}} {{appraisal.in_conflict|yesno:"conflict,"}}' id="tr_table_in_revision-{{appraisal.id}}">
     {% include 'main/appraisals_table_in_revision_tr.html' %}
   </tr>
   {% endfor %}
