--- a/web/main/templates/main/index.html
+++ b/web/main/templates/main/index.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% block head %}
   <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
+  <link rel="stylesheet" href="{% static 'main/css/logbook.css' %}">
+  <link rel="stylesheet" href="{% static 'main/css/table_search.css' %}">
   {% load static %}
 {% endblock %}
 
