--- a/web/main/templates/main/modals_archive.html
+++ b/web/main/templates/main/modals_archive.html
@@ -1,23 +1,23 @@
 <div class="modal-dialog" role="document">
   <div class="modal-content">
     <div class="modal-header">
-      <h5 class="modal-title" id="exampleModalLabel">Eliminar tasación</h5>
+      <h5 class="modal-title">Archivar tasación</h5>
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
     <div class="modal-body">
-        <p>¿Esta seguro que desea eliminar la tasación?</p>
-        <p>¡Se perderán todos los datos!</p>
+        <div class="alert alert-danger text-center">¿Esta seguro que desea archivar la tasación?</div>
+        <p style="font-size:0.9em;text-align:center;">Las tasaciones archivadas pueden ser encontradas en el archivo.</p>
     </div>
     <div class="modal-footer">
       <form action="" method="post" id="form">
         {% csrf_token %}
-        <input id="appraisal_id" name="appraisal_id" type="hidden" value="2">
+        <input id="appraisal_id" name="appraisal_id" type="hidden" value="{{appraisal.id}}">
         <input id="source_table" name="source_table" type="hidden" value="2">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-        <button class="btn btn-primary ld-ext-right" id="btn_delete_appraisal" name="delete" value="a">
-          Eliminar
+        <button class="btn btn-primary ld-ext-right" id="btn_archive_appraisal" name="delete" value="a">
+          Archivar
           <div class="ld ld-ring ld-spin"></div>
         </button>
       </form>
